# iri_color_interesting_points_tableware

./: CMakeLists.txt  README.md  package.xml
cfg/: ColorInterestingPointsTableware.cfg
include/: color_interesting_points_tableware_alg.h  color_interesting_points_tableware_alg_node.h
launch/: iri_color_interesting_points_tableware.launch  iri_color_interesting_points_tableware_ROSbag.launch  iri_color_interesting_points_tableware_and_CAM.launch  iri_color_interesting_points_tableware_and_CAM_NewCalibration.launch
src/: color_interesting_points_tableware_alg.cpp  color_interesting_points_tableware_alg_node.cpp
srv/: InterestPoints.srv
